--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+asgiref==3.8.1
 Django==5.0.2
-scikit-learn==1.4.0
+gunicorn==23.0.0
+joblib==1.3.2
 numpy==1.26.3
+packaging==24.2
 pandas==2.2.0
-joblib==1.3.2 
-gunicorn
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.4.0
+scipy==1.15.2
+six==1.17.0
+sqlparse==0.5.3
+threadpoolctl==3.6.0
+tzdata==2025.2
